# platform.core.pim.contacts-service

./: CMakeLists.txt  LICENSE.APLv2  NOTICE  contacts-service.pc.in  contacts-service2.manifest  contacts-service2.rule  project.config  schema.sql
build-util/: API-generator.c  DB-schema-gen.c  DB-schema-gen2.c  Makefile  generator.sh
client/: CMakeLists.txt  contacts-service2.pc.in  ctsvc_client_activity.c  ctsvc_client_activity_helper.c  ctsvc_client_activity_helper.h  ctsvc_client_db.c  ctsvc_client_db_helper.c  ctsvc_client_db_helper.h  ctsvc_client_db_notification.c  ctsvc_client_group.c  ctsvc_client_group_helper.c  ctsvc_client_group_helper.h  ctsvc_client_handle.c  ctsvc_client_handle.h  ctsvc_client_ipc.c  ctsvc_client_ipc.h  ctsvc_client_noti.c  ctsvc_client_person.c  ctsvc_client_person_helper.c  ctsvc_client_person_helper.h  ctsvc_client_phonelog.c  ctsvc_client_phonelog_helper.c  ctsvc_client_phonelog_helper.h  ctsvc_client_service.c  ctsvc_client_service_helper.c  ctsvc_client_service_helper.h  ctsvc_client_setting.c  ctsvc_client_setting.h  ctsvc_client_sim.c  ctsvc_client_utils.c  ctsvc_client_utils.h
common/: ctsvc_common_setting.c  ctsvc_common_setting.h  ctsvc_db_notification.c  ctsvc_filter.c  ctsvc_filter.h  ctsvc_handle.c  ctsvc_handle.h  ctsvc_image_util.c  ctsvc_image_util.h  ctsvc_inotify.c  ctsvc_inotify.h  ctsvc_internal.h  ctsvc_list.c  ctsvc_list.h  ctsvc_localize.c  ctsvc_localize.h  ctsvc_localize_ch.c  ctsvc_localize_ch.h  ctsvc_localize_jp.c  ctsvc_localize_jp.h  ctsvc_localize_kor.h  ctsvc_localize_utils.c  ctsvc_localize_utils.h  ctsvc_mutex.c  ctsvc_mutex.h  ctsvc_normalize.c  ctsvc_normalize.h  ctsvc_notify.h  ctsvc_query.c  ctsvc_query.h  ctsvc_record.c  ctsvc_record.h  ctsvc_record_addressbook.c  ctsvc_record_contact.c  ctsvc_record_group.c  ctsvc_record_my_profile.c  ctsvc_record_person.c  ctsvc_record_phonelog.c  ctsvc_record_result.c  ctsvc_record_sdn.c  (+14 more)
debian/: changelog  contacts-service-bin.postinst.in  control  libcontacts-service.postinst.in  rules
doc/: contacts_doc.h
helper/: CMakeLists.txt  contacts-svc-helper.sh  helper-socket.c  helper-socket.h  internal.h  localize.c  localize.h  main.c  normalize.c  normalize.h  schema-recovery.c  schema-recovery.h  sim.c  sim.h  sqlite.c  sqlite.h  utils.c  utils.h
native/: CMakeLists.txt  contacts-service3.pc.in  ctsvc_activity.c  ctsvc_activity.h  ctsvc_db_access_control.c  ctsvc_db_access_control.h  ctsvc_db_init.c  ctsvc_db_init.h  ctsvc_db_plugin_activity.c  ctsvc_db_plugin_activity_photo.c  ctsvc_db_plugin_activity_photo_helper.c  ctsvc_db_plugin_activity_photo_helper.h  ctsvc_db_plugin_address.c  ctsvc_db_plugin_address_helper.c  ctsvc_db_plugin_address_helper.h  ctsvc_db_plugin_addressbook.c  ctsvc_db_plugin_addressbook_helper.c  ctsvc_db_plugin_addressbook_helper.h  ctsvc_db_plugin_company.c  ctsvc_db_plugin_company_helper.c  ctsvc_db_plugin_company_helper.h  ctsvc_db_plugin_contact.c  ctsvc_db_plugin_contact_helper.c  ctsvc_db_plugin_contact_helper.h  ctsvc_db_plugin_email.c  ctsvc_db_plugin_email_helper.c  ctsvc_db_plugin_email_helper.h  ctsvc_db_plugin_event.c  ctsvc_db_plugin_event_helper.c  ctsvc_db_plugin_event_helper.h  ctsvc_db_plugin_extension.c  ctsvc_db_plugin_extension_helper.c  ctsvc_db_plugin_extension_helper.h  ctsvc_db_plugin_group.c  ctsvc_db_plugin_group_helper.c  ctsvc_db_plugin_group_helper.h  ctsvc_db_plugin_grouprelation.c  ctsvc_db_plugin_image.c  ctsvc_db_plugin_image_helper.c  ctsvc_db_plugin_image_helper.h  (+66 more)
server/: CMakeLists.txt  contacts-service-ipcd.sh  ctsvc_ipc_server.c  ctsvc_ipc_server.h  ctsvc_ipc_server2.c  ctsvc_ipc_server2.h  ctsvc_ipc_server_sim.c  ctsvc_ipc_server_sim.h  ctsvc_localize.c  ctsvc_localize.h  ctsvc_localize_ch.c  ctsvc_localize_ch.h  ctsvc_localize_jp.c  ctsvc_localize_jp.h  ctsvc_localize_kor.c  ctsvc_localize_kor.h  ctsvc_normalize.c  ctsvc_normalize.h  ctsvc_notification.c  ctsvc_notification.h  ctsvc_number_utils.c  ctsvc_number_utils.h  ctsvc_schema_recovery.c  ctsvc_schema_recovery.h  ctsvc_server.c  ctsvc_server.h  ctsvc_server_activity.c  ctsvc_server_activity.h  ctsvc_server_bg.c  ctsvc_server_bg.h  ctsvc_server_change_subject.c  ctsvc_server_change_subject.h  ctsvc_server_group.c  ctsvc_server_group.h  ctsvc_server_person.c  ctsvc_server_person.h  ctsvc_server_phonelog.c  ctsvc_server_phonelog.h  ctsvc_server_service.c  ctsvc_server_service.h  (+17 more)
server/db/: ctsvc_db_access_control.c  ctsvc_db_access_control.h  ctsvc_db_init.c  ctsvc_db_init.h  ctsvc_db_plugin_activity.c  ctsvc_db_plugin_activity_photo.c  ctsvc_db_plugin_activity_photo_helper.c  ctsvc_db_plugin_activity_photo_helper.h  ctsvc_db_plugin_address.c  ctsvc_db_plugin_address_helper.c  ctsvc_db_plugin_address_helper.h  ctsvc_db_plugin_addressbook.c  ctsvc_db_plugin_addressbook_helper.c  ctsvc_db_plugin_addressbook_helper.h  ctsvc_db_plugin_company.c  ctsvc_db_plugin_company_helper.c  ctsvc_db_plugin_company_helper.h  ctsvc_db_plugin_contact.c  ctsvc_db_plugin_contact_helper.c  ctsvc_db_plugin_contact_helper.h  ctsvc_db_plugin_email.c  ctsvc_db_plugin_email_helper.c  ctsvc_db_plugin_email_helper.h  ctsvc_db_plugin_event.c  ctsvc_db_plugin_event_helper.c  ctsvc_db_plugin_event_helper.h  ctsvc_db_plugin_extension.c  ctsvc_db_plugin_extension_helper.c  ctsvc_db_plugin_extension_helper.h  ctsvc_db_plugin_group.c  ctsvc_db_plugin_group_helper.c  ctsvc_db_plugin_group_helper.h  ctsvc_db_plugin_grouprelation.c  ctsvc_db_plugin_image.c  ctsvc_db_plugin_image_helper.c  ctsvc_db_plugin_image_helper.h  ctsvc_db_plugin_messenger.c  ctsvc_db_plugin_messenger_helper.c  ctsvc_db_plugin_messenger_helper.h  ctsvc_db_plugin_my_profile.c  (+39 more)
test/: CMakeLists.txt  Makefile  SIMexport-test.c  SIMimport-test.c  addressbook-test.c  change-noti-test.c  contact-test.c  group-test.c  myprofile-test.c  person-test.c  phonelog-test.c  restriction-test.c  test-log.h  test_base.c  test_base.h  test_debug.h  test_main.c  test_main.h  test_query.c  test_query.h  test_sip.c  test_sip.h  test_snippet.c  test_snippet.h  test_utils.c  test_utils.h  timetest.c  timetest.h  vcard2contact-test.c
(+124 files in other folders)
