INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB TEST_SRCS *.c)

pkg_check_modules(test_pkgs REQUIRED glib-2.0 dlog icu-i18n)
INCLUDE_DIRECTORIES(${test_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${test_pkgs_LIBRARY_DIRS})

SET(CONTACTS_SERVICE_TEST "contacts-service-test")

ADD_EXECUTABLE(${CONTACTS_SERVICE_TEST} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(${CONTACTS_SERVICE_TEST} ${test_pkgs_LIBRARIES} ${CLIENT})

INSTALL(TARGETS ${CONTACTS_SERVICE_TEST} DESTINATION ${BIN_INSTALL_DIR})
