CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(contacts-service-test C CXX)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
IF (TIZEN_WEARABLE)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/wearable)
ENDIF (TIZEN_WEARABLE)
IF (TIZEN_MOBILE)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/mobile)
ENDIF (TIZEN_MOBILE)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR})

FILE(GLOB TEST_SRCS
	*.c)

pkg_check_modules(test_pkgs REQUIRED
	glib-2.0
	dlog
	icu-i18n)
INCLUDE_DIRECTORIES(${test_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${test_pkgs_LIBRARY_DIRS})

SET(LIBNAME contacts-service2)
ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${test_pkgs_LIBRARIES} ${LIBNAME} -lpthread)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BIN_INSTALL_DIR})
